--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+<head><
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Legendary Urban Hacker Website</title>
+    <meta name="description" content="Checkout my Website! Hack and be Happy!">
+    <meta name="description" content="hacker, maker, tinker">
+    <link rel="stylesheet" href="assets/css/main.css">
 </head>
 <body>
     
