--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<head><
+<head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -9,7 +9,13 @@
     <meta name="description" content="hacker, maker, tinker">
     <link rel="stylesheet" href="assets/css/main.css">
 </head>
-<body>
+<body class=is-preload">
+    <!--Header-->
+    <header id="header">
+        <a class="logo" href="index.html">Legendary Urban Hacker</a>
+    </header>
+
+    <!--Nav-->
     
 </body>
 </html>
