Insert Banner (html) and start to introduce content.

--- a/index.html
+++ b/index.html
@@ -24,6 +24,16 @@
             </ul>
                    
     </nav>
-    
+    <!--Banner-->
+    <section id="banner">
+        <div class="inner">
+            <h1> Legendary Urban Hacker</h1>
+            <p>I´m passionate about hacking everyday urban items and I hope I can inspire you to do the same!
+                Reusing objects instead of throwing them away saves you money, it's ecological and FUN! Also, in the way we can learn a lot.
+                If we do this in a clever way then we will be Hacking!
+                My motto in life is "Hack and be Happy!" 
+                Visit me at https://www.youtube.com/channel/UCPVnvNONrCToFtR2UmuUM5g end enjoy!</p>
+        </div>
+    </section>
 </body>
 </html>
