--- a/index.html
+++ b/index.html
@@ -101,6 +101,12 @@
 					</div>
 				</div>
 			</section>
-
+<!-- CTA -->
+<section id="cta" class="wrapper">
+	<div class="inner">
+		<h1>Curabitur ullamcorper ultricies</h1>
+		<p>Nunc lacinia ante nunc ac lobortis. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus ornare mi ut ante amet placerat aliquet. Volutpat eu sed ante lacinia sapien lorem accumsan varius montes viverra nibh in adipiscing. Lorem ipsum dolor vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing sed feugiat eu faucibus. Integer ac sed amet praesent. Nunc lacinia ante nunc ac gravida.</p>
+	</div>
+</section>
 </body>
 </html>
