--- a/index.html
+++ b/index.html
@@ -106,5 +106,28 @@
 		<p>Nunc lacinia ante nunc ac lobortis. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus ornare mi ut ante amet placerat aliquet. Volutpat eu sed ante lacinia sapien lorem accumsan varius montes viverra nibh in adipiscing. Lorem ipsum dolor vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing sed feugiat eu faucibus. Integer ac sed amet praesent. Nunc lacinia ante nunc ac gravida.</p>
 	</div>
 </section>
+<!-- Testimonials -->
+<section class="wrapper">
+	<div class="inner">
+		<header class="special">
+			<h2>Faucibus consequat lorem</h2>
+			<p>In arcu accumsan arcu adipiscing accumsan orci ac. Felis id enim aliquet. Accumsan ac integer lobortis commodo ornare aliquet accumsan erat tempus amet porttitor.</p>
+		</header>
+		<div class="testimonials">
+			<section>
+				<div class="content">
+					<blockquote>
+						<p>Nunc lacinia ante nunc ac lobortis ipsum. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus.</p>
+					</blockquote>
+					<div class="author">
+						<div class="image">
+							<img src="images/pic01.jpg" alt="" />
+						</div>
+						<p class="credit">- <strong>Jane Doe</strong> <span>CEO - ABC Inc.</span></p>
+					</div>
+				</div>
+			</section>
+			<section>
+				
 </body>
 </html>
